# cfxmark

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: OPAQUE.md  REQUIREMENTS.md  SPEC.md
src/cfxmark/: __init__.py  api.py  assets.py  ast.py  confluence.py  exceptions.py  normalize.py  opaque.py  xml_ns.py
src/cfxmark/jira/: __init__.py
src/cfxmark/macros/: __init__.py  registry.py
src/cfxmark/macros/builtins/: __init__.py  admonition.py  expand.py  jira.py  toc.py
src/cfxmark/parsers/: __init__.py  cfx.py  jira_wiki.py  md.py
src/cfxmark/renderers/: __init__.py  cfx.py  jira_wiki.py  md.py
tests/: conftest.py  test_corpus.py
tests/corpus/: synthetic.cfx.example
tests/corpus/inline_italic_boundary/: fixture_legitimate_italic.md  fixture_notice_pattern.md  fixture_section_missing.md  fixture_simple.md
tests/fixtures/jira_wiki/: 01_basic_prose.wiki  02_sections_and_boundary_tilde.wiki  03_nested_lists_with_dashes.wiki  04_multiline_table_and_nested_link.wiki  05_tables_adjacent_headings.wiki  06_image_italic_empty_heading.wiki
tests/property/: test_round_trip.py
tests/unit/: test_assets.py  test_cfx_to_md.py  test_confluence_auth.py  test_confluence_client.py  test_jira_wiki.py  test_jira_wiki_golden.py  test_jira_wiki_parser.py  test_md_to_cfx.py  test_opaque.py  test_security.py
