[project]
name = "cfxmark"
version = "0.3.0"
description = "Bidirectional Markdown <-> Confluence Storage XHTML converter with lossless opaque preservation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eunsan Jo" }]
keywords = [
    "confluence",
    "markdown",
    "xhtml",
    "storage-format",
    "converter",
    "bidirectional",
    "round-trip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]
dependencies = [
    "lxml>=5.0",
    "mistletoe>=1.3",
]

[project.optional-dependencies]
confluence = []  # Namespace-only extra — zero third-party runtime deps.
                 # See README "Install" for rationale.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "lxml-stubs>=0.5",
]

[project.urls]
Homepage = "https://github.com/eunsanMountain/cfxmark"
Repository = "https://github.com/eunsanMountain/cfxmark"
Issues = "https://github.com/eunsanMountain/cfxmark/issues"
Documentation = "https://github.com/eunsanMountain/cfxmark/blob/main/docs/SPEC.md"
Changelog = "https://github.com/eunsanMountain/cfxmark/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfxmark"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]
exclude = [
    "/.omc",
    "/tests/corpus/*.json",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".omc"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM108",  # ternary preference — clarity sometimes wins over compactness
    "SIM102",  # nested-if collapse — same reason
    "B007",  # unused loop variable (intentional in indexed loops)
    "B905",  # zip without strict — internal pure-Python iteration
    "B904",  # raise from in defensive re-raise
    "SIM103",  # return condition directly
    "SIM110",  # return any/all
    "F841",  # unused local — ok in clarifying variable assignments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["build/", "dist/", "tests/"]
# Strict mode disabled for v0.1 — lxml's loose tag typing produces a
# wave of false-positive `unreachable` warnings. Tightening planned for
# v0.2 once we wrap lxml in a typed adapter.

[[tool.mypy.overrides]]
module = ["mistletoe.*", "lxml.builder"]
ignore_missing_imports = true

# These modules wrap third-party trees (mistletoe / lxml) whose
# attribute types are intentionally permissive. We ignore the
# narrowing-related errors here for v0.1; v0.2 will introduce typed
# adapter wrappers.
[[tool.mypy.overrides]]
module = ["cfxmark.parsers.md", "cfxmark.parsers.cfx", "cfxmark.normalize"]
disable_error_code = ["arg-type", "index", "misc"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "property: Hypothesis-based property tests (may be slow)",
    "corpus: Golden-file tests against real Confluence pages",
]
